--- a/final/pages/macros.tex
+++ b/final/pages/macros.tex
@@ -1,7 +1,7 @@
 % \image {Имя изображения.расширение}{Подпись к рисунку}{Скейл Изображения}
 
 \newcommand{\image}[4]{
-\begin{figure}[H]
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=#4\textwidth]{#1}
 	\caption{#2}
