--- a/final/pages/appendix.tex
+++ b/final/pages/appendix.tex
@@ -5,7 +5,7 @@
 \begin{listing}[htp]
     \centering
     \begin{minipage}{\linewidth}
-    \inputminted[linenos=true, tabsize=4]{csharp}{assets/listings/clair_compose.yaml}
+    \inputminted[linenos=true, tabsize=4]{yaml}{assets/listings/clair_compose.yaml}
     \end{minipage}
 \end{listing}
 
